--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,8 +4,12 @@
 	<title>Ilya's blog</title>
 </head>
 <body>
+{% for post in posts%}	
 	<div>
-		<h1><a href="/">Djando!</a></h1>
+		<p>published: {{post.published_date}}</p>
+		<h1><a href="/">{{post.title}}</a></h1>
+		<p>{{post.text}}</p>
 	</div>
+{% endfor %}	
 </body>
 </html>
